--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-node_modules/
 .env
+backend/.env
+node_modules/
 uploads/
 .DS_Store
 .vscode/
+npm-debug.log   
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+build/
