--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,19 @@
+# Environment files
 .env
 backend/.env
-node_modules/
-uploads/
-.DS_Store
-.vscode/
-npm-debug.log   
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Dependencies
+node_modules/
+
+# Uploads / build
+uploads/
 build/
+
+# OS / Editor files
+.DS_Store
+.vscode/
+npm-debug.log
